Staging/asset-management/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-assetmanagement-service
  namespace: staging
spec:
  selector:
    app: staging-assetmanagement-app
  ports:
    - protocol: "TCP"
      port: 8081
      targetPort: 8081
  type: ClusterIP
