Staging/asset-management/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-assetmanagement-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: platform.tpcloud.tech
      http:
        paths:
          - path: /asset-management/(.*)
            pathType: Prefix

            backend:

              service:

                name: staging-assetmanagement-service

                port:

                  number: 8081
